add swagger correction
