# src/routs/list-router.js
@@ -7,11 +7,12 @@ import {
 } from "../controllers/list-controller.js";
 
 const todoListRouter = express.Router();
-console.log("worcks well");
+//console.log(deleteTodolist());
 todoListRouter.post("/todo/add", addTodoList);
 console.log("worcks");
+
 todoListRouter.get("/todo", getAllTodoList);
 todoListRouter.put("/update/:id", updateTodolist);
-todoListRouter.delete("/delete", deleteTodolist);
+todoListRouter.delete("/delete/:id", deleteTodolist);
 
 export default todoListRouter;
